--- a/blogpost/post/templates/base.html
+++ b/blogpost/post/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -9,11 +10,10 @@
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
-		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
-			</section>
-		</div>
+	<body>
+		{% include 'navbar.html' %}
+		{% block content %}
+		{% endblock content %}
+		{% include 'footer.html' %}
 	</body>
 </html>
